# os-hacking

./: Cargo.toml  build.rs  rust-toolchain.toml
crates/boot-image/: Cargo.toml  build.rs
crates/boot-image/src/: fat.rs  gpt.rs  lib.rs  pxe.rs
crates/bootloader/: Cargo.toml
crates/bootloader-api/: Cargo.toml  build.rs
crates/bootloader-api/src/: info.rs  lib.rs
crates/bootloader/src/: main.rs
crates/bootloader/src/arch/: mod.rs
crates/bootloader/src/arch/aarch64/: mod.rs
crates/kernel/src/: main.rs
src/: main.rs
targets/: aarch64-unknown-kernel.json  x86_64-unknown-kernel.json
